[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/menu/ControlSchemeHBox.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/raw/novem___.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="ControlSchemeHBox" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 128, 0 )
rect_clip_content = true
theme = ExtResource( 1 )
custom_constants/separation = 24
alignment = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 348.0
size_flags_vertical = 3
custom_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 469.0
margin_top = 150.0
margin_right = 634.0
margin_bottom = 197.0
size_flags_horizontal = 10
text = "Control Scheme:"
align = 2

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
margin_left = 646.0
margin_top = 144.0
margin_right = 826.0
margin_bottom = 204.0
rect_min_size = Vector2( 180, 60 )
size_flags_horizontal = 2
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Keyboard"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 372.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="AttackVBox" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 309.0
margin_bottom = 348.0
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/AttackVBox"]
margin_right = 309.0
margin_bottom = 47.0
text = "- Attack -"
align = 1
valign = 1

[node name="ControlLabel" type="Label" parent="HBoxContainer/AttackVBox"]
margin_top = 51.0
margin_right = 309.0
margin_bottom = 98.0
text = "Left Mouse Button"
align = 1
valign = 1
autowrap = true

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_left = 313.0
margin_right = 317.0
margin_bottom = 348.0

[node name="InteractVBox" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 321.0
margin_right = 630.0
margin_bottom = 348.0
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/InteractVBox"]
margin_right = 309.0
margin_bottom = 47.0
text = "- Interact -"
align = 1
valign = 1

[node name="ControlLabel" type="Label" parent="HBoxContainer/InteractVBox"]
margin_top = 51.0
margin_right = 309.0
margin_bottom = 98.0
text = "F"
align = 1
valign = 1
autowrap = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 634.0
margin_right = 638.0
margin_bottom = 348.0

[node name="MovementVBox" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 642.0
margin_right = 951.0
margin_bottom = 348.0
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/MovementVBox"]
margin_right = 309.0
margin_bottom = 47.0
text = "- Movement -"
align = 1
valign = 1

[node name="ControlLabel" type="Label" parent="HBoxContainer/MovementVBox"]
margin_top = 51.0
margin_right = 309.0
margin_bottom = 98.0
text = "Right Mouse Button"
align = 1
valign = 1
autowrap = true

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_left = 955.0
margin_right = 959.0
margin_bottom = 348.0

[node name="RunVBox" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 963.0
margin_right = 1272.0
margin_bottom = 348.0
size_flags_horizontal = 3

[node name="DescriptionLabel" type="Label" parent="HBoxContainer/RunVBox"]
margin_right = 309.0
margin_bottom = 47.0
text = "- Run - "
align = 1
valign = 1

[node name="ControlLabel" type="Label" parent="HBoxContainer/RunVBox"]
margin_top = 51.0
margin_right = 309.0
margin_bottom = 98.0
text = "Shift"
align = 1
valign = 1
autowrap = true

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer"]
margin_left = 1276.0
margin_right = 1280.0
margin_bottom = 348.0
